feito algumas alterações para melhorar a api
