# storage/api-docs/api-docs.json
@@ -106,6 +106,44 @@
                 }
             }
         },
+        "/auth/login_adm": {
+            "post": {
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Generate new Token",
+                "operationId": "App\\Http\\Controllers\\AuthController::loginAdm",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "email": {
+                                        "type": "string"
+                                    },
+                                    "password": {
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object",
+                                "example": {
+                                    "email": "jaidsondantas@gmail.com",
+                                    "password": "123"
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    }
+                }
+            }
+        },
         "/auth/logout": {
             "post": {
                 "tags": [
